# media-organizer-rust

./: Cargo.toml
src/: archive_cleaner.rs  file_handler.rs  formatter.rs  lib.rs  main.rs
